fixed excess border bottom problem on mobile overlay

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -110,7 +110,6 @@ span.way {
 }
 
 .navWrapper .overlay .wrap ul.wrap-nav {
-  border-bottom: 1px solid #575757;
   text-transform: capitalize;
   padding: 150px 0 100px;
 }
